Up 1  index.html
update 1

--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 </head>
 <body>
 <div class="container">
+    <br>
     <h1>'AI' Text to Image Generator -</h1>
 
     <div class="input">
         <label>Create a Image From Text (Prompt) :</label>
-        <input type="text" id="input" placeholder="Enter a Text to Generate The Image">
+        <input type="text" id="input" placeholder="Enter a Text to Generate The Image. . .">
         <button id="btn">Generate Image <img src="gen.svg"></button>
     </div>
 
     <div class="output">
         <div class="image"> 
-            <img id="image" src="" alt="loading...">
+            <img id="image"src="" alt="loading...">
             <img id="svg" src="image.svg">
             <img id="loading" src="1.load.gif">
         </div>
         <div class="btns">
             <button id="download">Download <img src="down.svg"></button>
-            <button id="reset">Reset <img src="reset.svg"></button>
+            <button id="reset">Reset <img src="reset.svg"></button> 
         </div>
     </div>
+    <br>
 </div>
 
     <script>
